--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -7,3 +7,5 @@ $content: var(--cms-text-color-content);
 $disabled: var(--cms-color-disabled);
 $border: var(--cms-border-color);
 $background: var(--cms-background-color);
+$white: var(--cms-white);
+$black: var(--cms-black);
