--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./base/variables.scss";
 @import "./mixin/mixins";
 @import "./base/font";
+@import "./base/normalize.css";
 @import "../components/button/styles.scss";
