--- a/src/styles/base/normalize.css
+++ b/src/styles/base/normalize.css
@@ -11,13 +11,18 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  color: var(--cms-text-color-content);
   font-size: 14px;
   min-height: 100vh;
+  background-color: var(--cms-background-color);
   transition: all 0.25s ease 0s;
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Firefox */
   /* -ms-user-select: none; IE/Edge */
   user-select: none; /* 标准语法 */
+  font-family: -apple-system, blinkmacsystemfont, "Helvetica Neue", helvetica,
+    segoe ui, arial, roboto, "PingFang SC", "miui", "Hiragino Sans GB",
+    "Microsoft Yahei", sans-serif;
 }
 html,
 body,
